fix  issue:  complete_trainer, education info &  datelayout issue

--- a/webapp/assets/website/css/laydate.css
+++ b/webapp/assets/website/css/laydate.css
@@ -32,7 +32,7 @@ html{_background-image:url(about:blank); _background-attachment:fixed;}
 .laydate_body .laydate_ym .laydate_yms{position:absolute; left: -1px; top: 24px; height:181px;}
 .laydate_body .laydate_y{width:121px; margin-right:6px;}
 .laydate_body .laydate_y input{width:64px; margin-right:15px;}
-.laydate_body .laydate_y .laydate_yms{width:121px; text-align:center;}
+.laydate_body .laydate_y .laydate_yms{width:250px; text-align:center;}
 .laydate_body .laydate_y .laydate_yms a{position:relative; display:block; height:20px;}
 .laydate_body .laydate_y .laydate_yms ul{height:139px; padding:0; *overflow:hidden;}
 .laydate_body .laydate_y .laydate_yms ul li{float:left; width:121px; height:20px; line-height: 20px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap;}
